Add form to manually add items in shopping list

--- a/src/index.html
+++ b/src/index.html
@@ -345,6 +345,15 @@
             <h2 class="heading-2">My Shopping List</h2>
 
             <ul class="shopping__list">
+                    <li class="shopping__item" style="border-bottom: 0px solid #F2EFEE">
+                            <div class="shopping__custom">                               
+                                    <input type="number" class="shopping__custom--value">
+                                    <input class="shopping__custom--unit unit">
+                                    <input class="shopping__custom--description description">                                     
+                            </div>                        
+                        </li>
+                
+                        <button class="btn-small list__btn list__btn-add">Add item</button>
 
                 <!--
                 <li class="shopping__item">
